objects/ianb__Notice__c.object
<CustomObject>
    <description>A Notice to be published to Improved Noticeboard Recipients</description>
    <fields>
        <fullName>ianb__AcknowledgedAndFlaggedNotifications__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of Notifications that have been Acknowledged &amp; Flagged by Recipients; to indicate that they need further assistance to fulfil the Required Action and/or the Notice&apos;s purpose</description>
        <inlineHelpText>The number of Notifications that have been Acknowledged &amp; Flagged by Recipients; to indicate that they need further assistance to fulfil the Required Action and/or the Notice&apos;s purpose</inlineHelpText>
        <label>Flagged Notifications</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ianb__AcknowledgedNotifications__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of Notifications that hat been Acknowledged in some way by Recipients (where Acknowledgement is the Required Acton)</description>
        <inlineHelpText>The number of Notifications that hat been Acknowledged in some way by Recipients (where Acknowledgement is the Required Acton)</inlineHelpText>
        <label>Acknowledged Notifications</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ianb__AcknowledgementStatement__c</fullName>
        <description>A Notice-specific acknowledgement statement for Recipients to agree (and optionally Flag for follow-up) if the Notice Required Action is to Acknowledge the Notice. New Notices default to the parent NoticeBoards Default Acknowledgement Statement.</description>
        <inlineHelpText>A Notice-specific acknowledgement statement for Recipients to agree (and optionally Flag for follow-up) if the Notice Required Action is to Acknowledge the Notice. New Notices default to the parent NoticeBoards Default Acknowledgement Statement.</inlineHelpText>
        <label>Acknowledgement Statement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ianb__AllowComment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows Recipients to provide Comments with their Response to this Notice, when checked</description>
        <inlineHelpText>Allows Recipients to provide Comments with their Response to this Notice, when checked</inlineHelpText>
        <label>Allow Comment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ianb__ApprovalRequestSubmittedDate__c</fullName>
        <description>The date and time when this Notice was first submitted for Approval - if pre-publication approval was set as required</description>
        <inlineHelpText>The date and time when this Notice was first submitted for Approval - if pre-publication approval was set as required</inlineHelpText>
        <label>Approval Request Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ianb__ApprovalRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sets whether any Notice Approval process is required before this Notice can be published</description>
        <inlineHelpText>Sets whether any Notice Approval process is required before this Notice can be published</inlineHelpText>
        <label>Approval Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ianb__ApprovalStatus__c</fullName>
        <description>Tracks the Status of approval process milestones on the Notice Approval tab. (Set via field updates from the approval Process.)</description>
        <inlineHelpText>Tracks the Status of approval process milestones on the Notice Approval tab. (Set via field updates from the approval Process.)</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0: Not Started</fullName>
                    <default>true</default>
                    <label>0: Not Started</label>
                </value>
                <value>
                    <fullName>1: Submitted</fullName>
                </value>
                <value>
                    <fullName>2: Rework Required</fullName>
                </value>
                <value>
                    <fullName>3: Resubmitted</fullName>
                </value>
                <value>
                    <fullName>4: Rejected</fullName>
                </value>
                <value>
                    <fullName>5: Approved</fullName>
                </value>
                <value>
                    <fullName>Not Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ianb__ApprovedDate__c</fullName>
        <description>The date and time when this Notice was Approved for publication - see the Notice Approvals tab for more detail. (Set via field updates from the approval process.)</description>
        <inlineHelpText>The date and time when this Notice was Approved for publication - see the Notice Approvals tab for more detail. (Set via field updates from the approval process.)</inlineHelpText>
        <label>Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ianb__AutoPublishCountdownDays__c</fullName>
        <description>The number of days until this Notice is set to be published automatically (by a time-based workflow)</description>
        <formula>IF( ISNULL( ianb__AutoPublishDate__c ) , null, round( Now() -  ianb__AutoPublishDate__c , 0))</formula>
        <inlineHelpText>The number of days until this Notice is set to be published automatically (by a time-based workflow)</inlineHelpText>
        <label>Auto-Publish Countdown (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ianb__AutoPublishDate__c</fullName>
        <description>The future date and time when this Notice is Scheduled to be published automatically (via time-based workflow)</description>
        <inlineHelpText>The future date and time when this Notice is Scheduled to be published automatically (via time-based workflow)</inlineHelpText>
        <label>Auto-Publish Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ianb__AutoSuspendCountdownDays__c</fullName>
        <description>The number of days until this Notice is set to be suspended from publication, automatically (by a time-based workflow)</description>
        <formula>IF( ISNULL(  ianb__AutoSuspendDate__c  ) , null, round( Now() -  ianb__AutoSuspendDate__c,0  ))</formula>
        <inlineHelpText>The number of days until this Notice is set to be suspended from publication, automatically (by a time-based workflow)</inlineHelpText>
        <label>Auto-Suspend Countdown (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ianb__AutoSuspendDate__c</fullName>
        <description>The future date and time when this Notice is Scheduled to be suspended from publication, automatically (via time-based workflow)</description>
        <inlineHelpText>The future date and time when this Notice is Scheduled to be suspended from publication, automatically (via time-based workflow)</inlineHelpText>
        <label>Auto-Suspend Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ianb__BannerActionMessage__c</fullName>
        <description>An optional, Notice-specific &apos;call to action&apos; message that overrides the default Required Action statement for this Notice&apos; Required Action setting</description>
        <inlineHelpText>An optional, Notice-specific &apos;call to action&apos; message that overrides the default Required Action statement for this Notice&apos; Required Action setting</inlineHelpText>
        <label>Banner Action Message</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ianb__BannerRequiredAction__c</fullName>
        <description>A formula returning the default Required Action by Recipients for this Notice - for display within the Recipients&apos; Notification Banner (unless overridden by a Notice-specific Banner Action Message)</description>
        <formula>IF (ISBLANK(ianb__BannerActionMessage__c), TEXT(ianb__RequiredAction__c),  ianb__BannerActionMessage__c)</formula>
        <inlineHelpText>A formula returning the default Required Action by Recipients for this Notice - for display within the Recipients&apos; Notification Banner (unless overridden by a Notice-specific Banner Action Message)</inlineHelpText>
        <label>Banner Required Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ianb__ClosedDate__c</fullName>
        <description>The date and time when this Notice was Closed - having served its purpose and completing its lifecycle, ready for archival, according to local procedures</description>
        <inlineHelpText>The date and time when this Notice was Closed - having served its purpose and completing its lifecycle, ready for archival, according to local procedures</inlineHelpText>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ianb__CustomStyle__c</fullName>
        <description>The custom style class, if any, to apply to this particular Notice and its Notifications</description>
        <inlineHelpText>The custom style class, if any, to apply to this particular Notice and its Notifications</inlineHelpText>
        <label>Custom Style</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ianb__Detail__c</fullName>
        <description>The core message for this Notice, in rich text format; including any links to resources required by Recipients to meet the Required Action</description>
        <inlineHelpText>The core message for this Notice, in rich text format; including any links to resources required by Recipients to meet the Required Action</inlineHelpText>
        <label>Detail</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ianb__DisplayedNotifications__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of Notifications that have been Displayed to Recipients via their Notification Banner, but not yet Opened (or Acknowledged in some way, if that is the Required Action)</description>
        <inlineHelpText>The number of Notifications that have been Displayed to Recipients via their Notification Banner, but not yet Opened (or Acknowledged in some way, if that is the Required Action)</inlineHelpText>
        <label>Displayed Notifications</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ianb__IgnoreRecipientErrors__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to continue with Notice publication in the event of errors arising with individual Recipients</description>
        <inlineHelpText>Check this box to continue with Notice publication in the event of errors arising with individual Recipients</inlineHelpText>
        <label>Ignore any Recipients that may cause err</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ianb__ImageURL__c</fullName>
        <description>Web address of an image to associate with this Notice</description>
        <inlineHelpText>Web address of an image to associate with this Notice</inlineHelpText>
        <label>Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ianb__IssuedNotifications__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of Notifications that have been Issued to Recipients, but not yet Displayed, Opened (and optionally, Acknowledged in some way, if required)</description>
        <inlineHelpText>The number of Notifications that have been Issued to Recipients, but not yet Displayed, Opened (and optionally, Acknowledged in some way, if required)</inlineHelpText>
        <label>Issued Notifications</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ianb__NoticeApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Salesforce User who will approve this Notice for publication, if approval is required (defaults to the NoticeBoard Owner for new Notices)</description>
        <inlineHelpText>The Salesforce User who will approve this Notice for publication, if approval is required (defaults to the NoticeBoard Owner for new Notices)</inlineHelpText>
        <label>Notice Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Notice_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ianb__NoticeBoard_Name__c</fullName>
        <description>Hidden field used to show parent field when visbility on parent record might be different</description>
        <formula>ianb__NoticeBoard__r.Name</formula>
        <label>NoticeBoard Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ianb__NoticeBoard_Theme_Image_URL__c</fullName>
        <description>Hidden field used to show parent field when visbility on parent record might be different</description>
        <formula>ianb__NoticeBoard__r.ianb__ThemeImageUrl__c</formula>
        <label>NoticeBoard Theme Image URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ianb__NoticeBoard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The NoticeBoard that contains this Notice - controlling its publishing team, policies, theme and default Signatory &amp; Acknowledgement Statement</description>
        <inlineHelpText>The NoticeBoard that contains this Notice - controlling its publishing team, policies, theme and default Signatory &amp; Acknowledgement Statement</inlineHelpText>
        <label>NoticeBoard</label>
        <referenceTo>ianb__NoticeBoard__c</referenceTo>
        <relationshipLabel>Notices</relationshipLabel>
        <relationshipName>Notices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ianb__NoticeMode__c</fullName>
        <defaultValue>&quot;User&quot;</defaultValue>
        <description>Defines the mode in which Recipients were selected - at an individual User level or as sets of Recipients, selected from one or more Lists</description>
        <inlineHelpText>Defines the mode in which Recipients were selected - at an individual User level or as sets of Recipients, selected from one or more Lists</inlineHelpText>
        <label>Notice Mode</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ianb__NoticeStatus__c</fullName>
        <description>Shows this Notice&apos;s current milestone status within the Notice Management Lifecycle - New, Drafted, Published, Suspended, Closed</description>
        <inlineHelpText>Shows this Notice&apos;s current milestone status within the Notice Management Lifecycle - New, Drafted, Published, Suspended, Closed</inlineHelpText>
        <label>Notice Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Drafted</fullName>
                </value>
                <value>
                    <fullName>Publication Started</fullName>
                </value>
                <value>
                    <fullName>Publication Failed</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ianb__NotificationResponseOption__c</fullName>
        <description>Controls arrangements for Required Action = Open &amp; Acknowledge: Acknowledge Only → 1 button; Acknowledge / Acknowledge &amp; Flag (for follow-up) → 2 buttons; Vote → Vote Options visible</description>
        <inlineHelpText>Controls arrangements for Required Action = Open &amp; Acknowledge: Acknowledge Only → 1 button; Acknowledge / Acknowledge &amp; Flag (for follow-up) → 2 buttons; Vote → Vote Options visible</inlineHelpText>
        <label>Notification Response Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acknowledge Only</fullName>
                    <default>true</default>
                    <label>Acknowledge Only</label>
                </value>
                <value>
                    <fullName>Acknowledge / Acknowledge &amp; Flag</fullName>
                </value>
                <value>
                    <fullName>Vote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ianb__NotificationStatisticsRefreshed__c</fullName>
        <description>The date and time when Notification statistics for this Notice were last refreshed. Click the &apos;Refresh&apos; button to update</description>
        <inlineHelpText>The date and time when Notification statistics for this Notice were last refreshed. Click the &apos;Refresh&apos; button to update</inlineHelpText>
        <label>Notification Statistics Last Refreshed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ianb__OpenedNotifications__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of Notifications that have been Opened by Recipients, but not yet Acknowledged in some form, (if that is the Required Action)</description>
        <inlineHelpText>The number of Notifications that have been Opened by Recipients, but not yet Acknowledged in some form, (if that is the Required Action)</inlineHelpText>
        <label>Opened Notifications</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ianb__PublicationOption__c</fullName>
        <description>Sets whether this Notice will be published automatically on the Auto-Publish Date (unless pending any Notice Approval) or manually</description>
        <inlineHelpText>Sets whether this Notice will be published automatically on the Auto-Publish Date (unless pending any Notice Approval) or manually</inlineHelpText>
        <label>Publication Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                    <default>true</default>
                    <label>Manual</label>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ianb__PublishedDate__c</fullName>
        <description>The date and time when this Notice was Published (and Notifications Issued to its Selected Recipients)</description>
        <inlineHelpText>The date and time when this Notice was Published (and Notifications Issued to its Selected Recipients)</inlineHelpText>
        <label>Published Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ianb__RecipientListDefinition__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <description>When using Notice Mode = &apos;List&apos; to select Recipients in bulk, this field records the currently selected lists</description>
        <inlineHelpText>When using Notice Mode = &apos;List&apos; to select Recipients in bulk, this field records the currently selected lists</inlineHelpText>
        <label>Recipient List Definition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ianb__RejectedDate__c</fullName>
        <description>The date and time when the (latest) Notice Approval Request for this Notice was Rejected. It is set by field updates from any approval process in play for this Notice - see the Notice Approvals tab for more detail.</description>
        <inlineHelpText>The date and time when the (latest) Notice Approval Request for this Notice was Rejected. It is set by field updates from any approval process in play for this Notice - see the Notice Approvals tab for more detail.</inlineHelpText>
        <label>Rejected Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ianb__RequiredActionDeadline__c</fullName>
        <description>The date and time by which Recipients must complete the Required Action associated with this Notice for it to be deemed successful</description>
        <inlineHelpText>The date and time by which Recipients must complete the Required Action associated with this Notice for it to be deemed successful</inlineHelpText>
        <label>Required Action Deadline</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ianb__RequiredAction__c</fullName>
        <description>Sets the response needed by Recipients for this Notice to be successful: &apos;Open and Read&apos; is an &apos;FYI&apos; announcement, whereas &apos;Read and Acknowledge&apos; means some form of feedback action or &apos;RSVP&apos; is required</description>
        <inlineHelpText>Sets the response needed by Recipients for this Notice to be successful: &apos;Open and Read&apos; is an &apos;FYI&apos; announcement, whereas &apos;Read and Acknowledge&apos; means some form of feedback action or &apos;RSVP&apos; is required</inlineHelpText>
        <label>Required Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Click to Dismiss</fullName>
                </value>
                <value>
                    <fullName>Open and Read</fullName>
                </value>
                <value>
                    <fullName>Read and Acknowledge</fullName>
                    <default>true</default>
                    <label>Read and Acknowledge</label>
                </value>
                <value>
                    <fullName>Visit URL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ianb__Salutation_Other__c</fullName>
        <description>Used with &apos;Salutation = Other&apos; to create a Notice-specific opening greeting for personalisation, such as &apos;Hey there, [John]&apos;</description>
        <inlineHelpText>Used with &apos;Salutation = Other&apos; to create a Notice-specific opening greeting for personalisation, such as &apos;Hey there, [John]&apos;</inlineHelpText>
        <label>Salutation-Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ianb__Salutation__c</fullName>
        <description>Enables a choice of formal, informal or custom (&apos;Other&apos;) opening greeting for Recipients to help &apos;set the tone&apos; of this Notice</description>
        <inlineHelpText>Enables a choice of formal, informal or custom (&apos;Other&apos;) opening greeting for Recipients to help &apos;set the tone&apos; of this Notice</inlineHelpText>
        <label>Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Personalised</fullName>
                    <label>[Not Personalised]</label>
                </value>
                <value>
                    <fullName>Dear</fullName>
                </value>
                <value>
                    <fullName>Hi</fullName>
                </value>
                <value>
                    <fullName>Hey</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ianb__SelectedRecipients__c</fullName>
        <defaultValue>0</defaultValue>
        <description>A count of all Selected Recipients for this Notice</description>
        <inlineHelpText>A count of all Selected Recipients for this Notice</inlineHelpText>
        <label>Selected Recipients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ianb__Signatory__c</fullName>
        <description>The name, role, function or team from whom this Notice is sent - as in an email&apos;s &apos;From&apos; field</description>
        <inlineHelpText>The name, role, function or team from whom this Notice is sent - as in an email&apos;s &apos;From&apos; field</inlineHelpText>
        <label>Signatory</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ianb__Summary__c</fullName>
        <description>A succinct statement which can constitute the entire Notice or summarise its Detail</description>
        <inlineHelpText>A succinct statement which can constitute the entire Notice or summarise its Detail</inlineHelpText>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ianb__SuspendedDate__c</fullName>
        <description>The date and time stamp when this Notice was suspended from publication</description>
        <inlineHelpText>The date and time stamp when this Notice was suspended from publication</inlineHelpText>
        <label>Suspended Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ianb__SuspensionOption__c</fullName>
        <description>Sets whether this Notice will be suspended from publication automatically on the Auto-Suspend date or manually</description>
        <inlineHelpText>Sets whether this Notice will be suspended from publication automatically on the Auto-Suspend date or manually</inlineHelpText>
        <label>Suspension Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                    <default>true</default>
                    <label>Manual</label>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ianb__Title__c</fullName>
        <description>The subject or &apos;headline&apos; for this Notice</description>
        <inlineHelpText>The subject or &apos;headline&apos; for this Notice</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ianb__UpdatesPending__c</fullName>
        <description>List of the Ids of any Apex Jobs relating to this Notice and its Recipients that have yet to complete execution</description>
        <inlineHelpText>List of the Ids of any Apex Jobs relating to this Notice and its Recipients that have yet to complete execution</inlineHelpText>
        <label>Updates Pending</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ianb__VoidReason__c</fullName>
        <description>Traps the reason for Voiding a Notice (setting it&apos;s Status to Closed), which has been submitted for Appoval but not yet Published</description>
        <inlineHelpText>Traps the reason for Voiding a Notice (setting it&apos;s Status to Closed), which has been submitted for Appoval but not yet Published</inlineHelpText>
        <label>Void Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ianb__VoteChoices__c</fullName>
        <description>A comma-separated list of the options from which Recipients can choose their vote. To set a default choice, enclose one value in square brackets (not including the comma, no spaces between choices). Examples: &apos;[Yes],No,Maybe&apos; or &apos;Red,Amber,Green&apos;</description>
        <inlineHelpText>A comma-separated list of the options from which Recipients can choose their vote. To set a default choice, enclose one value in square brackets (not including the comma, no spaces between choices). Examples: &apos;[Yes],No,Maybe&apos; or &apos;Red,Amber,Green&apos;</inlineHelpText>
        <label>Vote Choices</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Notice</label>
    <listViews>
        <fullName>ianb__All</fullName>
        <columns>ianb__NoticeBoard__c</columns>
        <columns>ianb__Signatory__c</columns>
        <columns>NAME</columns>
        <columns>ianb__NoticeStatus__c</columns>
        <columns>ianb__BannerRequiredAction__c</columns>
        <columns>ianb__RequiredActionDeadline__c</columns>
        <columns>ianb__AcknowledgementStatement__c</columns>
        <columns>ianb__ApprovalRequired__c</columns>
        <columns>ianb__ApprovalStatus__c</columns>
        <columns>ianb__NoticeApprover__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ianb__ApprovedDate__c</columns>
        <columns>ianb__PublishedDate__c</columns>
        <columns>ianb__SuspendedDate__c</columns>
        <columns>ianb__ClosedDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ianb__ApprovalNotStarted</fullName>
        <columns>ianb__NoticeBoard__c</columns>
        <columns>ianb__Signatory__c</columns>
        <columns>NAME</columns>
        <columns>ianb__Summary__c</columns>
        <columns>ianb__BannerRequiredAction__c</columns>
        <columns>ianb__RequiredActionDeadline__c</columns>
        <columns>ianb__AcknowledgementStatement__c</columns>
        <columns>ianb__NoticeApprover__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ianb__AutoPublishDate__c</columns>
        <columns>ianb__AutoSuspendDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ianb__ApprovalStatus__c</field>
            <operation>equals</operation>
            <value>0: Not Started</value>
        </filters>
        <label>Approval - Not Started</label>
    </listViews>
    <listViews>
        <fullName>ianb__ApprovalRejected</fullName>
        <columns>ianb__NoticeBoard__c</columns>
        <columns>ianb__Signatory__c</columns>
        <columns>NAME</columns>
        <columns>ianb__Summary__c</columns>
        <columns>ianb__BannerRequiredAction__c</columns>
        <columns>ianb__RequiredActionDeadline__c</columns>
        <columns>ianb__AcknowledgementStatement__c</columns>
        <columns>ianb__NoticeApprover__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ianb__AutoPublishDate__c</columns>
        <columns>ianb__AutoSuspendDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ianb__ApprovalStatus__c</field>
            <operation>equals</operation>
            <value>4: Rejected</value>
        </filters>
        <label>Approval - Rejected</label>
    </listViews>
    <listViews>
        <fullName>ianb__ApprovalSubmitted</fullName>
        <columns>ianb__NoticeBoard__c</columns>
        <columns>ianb__Signatory__c</columns>
        <columns>NAME</columns>
        <columns>ianb__Summary__c</columns>
        <columns>ianb__BannerRequiredAction__c</columns>
        <columns>ianb__RequiredActionDeadline__c</columns>
        <columns>ianb__AcknowledgementStatement__c</columns>
        <columns>ianb__NoticeApprover__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ianb__AutoPublishDate__c</columns>
        <columns>ianb__AutoSuspendDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ianb__ApprovalStatus__c</field>
            <operation>equals</operation>
            <value>1: Submitted</value>
        </filters>
        <label>Approval - Submitted</label>
    </listViews>
    <listViews>
        <fullName>ianb__Approved_for_Publication</fullName>
        <columns>ianb__NoticeBoard__c</columns>
        <columns>ianb__Signatory__c</columns>
        <columns>NAME</columns>
        <columns>ianb__Summary__c</columns>
        <columns>ianb__BannerRequiredAction__c</columns>
        <columns>ianb__RequiredActionDeadline__c</columns>
        <columns>ianb__AcknowledgementStatement__c</columns>
        <columns>ianb__NoticeApprover__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ianb__AutoPublishDate__c</columns>
        <columns>ianb__AutoSuspendDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ianb__ApprovalStatus__c</field>
            <operation>equals</operation>
            <value>5: Approved</value>
        </filters>
        <filters>
            <field>ianb__NoticeStatus__c</field>
            <operation>equals</operation>
            <value>Drafted</value>
        </filters>
        <label>Approved for Publication</label>
    </listViews>
    <listViews>
        <fullName>ianb__Closed</fullName>
        <columns>ianb__NoticeBoard__c</columns>
        <columns>ianb__Signatory__c</columns>
        <columns>NAME</columns>
        <columns>ianb__BannerRequiredAction__c</columns>
        <columns>ianb__RequiredActionDeadline__c</columns>
        <columns>ianb__AcknowledgementStatement__c</columns>
        <columns>ianb__ApprovalStatus__c</columns>
        <columns>ianb__NoticeApprover__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ianb__ApprovedDate__c</columns>
        <columns>ianb__PublishedDate__c</columns>
        <columns>ianb__SuspendedDate__c</columns>
        <columns>ianb__ClosedDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ianb__NoticeStatus__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>Closed</label>
    </listViews>
</CustomObject>